--- a/jupyter_notebooks/1_v2_Prepare_NTE_sequences_and_coordinates_removal_overlaps_PhyloCSF_score_addition.ipynb
+++ b/jupyter_notebooks/1_v2_Prepare_NTE_sequences_and_coordinates_removal_overlaps_PhyloCSF_score_addition.ipynb
@@ -9,8 +9,46 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alla/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
+      "\n",
+      "Bad key text.latex.unicode in file /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 112 ('text.latex.unicode : False # use \"ucs\" and \"inputenc\" LaTeX packages for handling')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key savefig.frameon in file /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 423 ('savefig.frameon : True')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key pgf.debug in file /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 444 ('pgf.debug           : False')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.level in file /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 475 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.fileo in file /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 476 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The text.latex.preview rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The mathtext.fallback_to_cm rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: Support for setting the 'mathtext.fallback_to_cm' rcParam is deprecated since 3.3 and will be removed two minor releases later; use 'mathtext.fallback : 'cm' instead.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The validate_bool_maybe_none function was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The savefig.jpeg_quality rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The keymap.all_axes rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The animation.avconv_path rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In /home/alla/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The animation.avconv_args rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n"
      ]
     }
    ],
@@ -81,8 +119,6 @@
     "    if pc==True:\n",
     "        troubles = []\n",
     "        li = []\n",
-    "\n",
-    "\n",
     "        with open(filepath, \"r\") as handle:\n",
     "            for record in SeqIO.parse(handle, \"fasta\"):\n",
     "                record_id = str(record.id)\n",
@@ -639,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,6 +683,7 @@
     "    global_coo_g25 = pd.read_csv(path_to_file_with_global_coo, sep='\\t')\n",
     "    global_coo_g25_f = global_coo_g25[global_coo_g25['hit'] == True]\n",
     "    global_coo_g25_f = global_coo_g25_f.sort_values(by=['seqnames', 'start'])\n",
+    "    \n",
     "    global_coo_g25_f['global_coo'] = global_coo_g25_f['seqnames']+':'+global_coo_g25_f['start'].astype(str) +'-'+global_coo_g25_f['end'].astype(str)\n",
     "    global_coo_g25_f = global_coo_g25_f[['group_name', 'strand', 'global_coo']].groupby(['group_name', 'strand']).agg('+'.join).reset_index()\n",
     "    global_coo_g25_f.columns = ['tr_id', 'strand', colname]\n",
@@ -655,14 +692,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tr # check: 77820 77820 77820\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-818a915f4f83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m primary_global = prepare_global_coo(path_to_file_with_global_coo='tmp_res/primary_NTE_global_coo.txt',\n\u001b[0;32m----> 2\u001b[0;31m                                    colname = 'global_coo_primary')\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m codons50_global = prepare_global_coo(path_to_file_with_global_coo='tmp_res/global_coo_50codons_and_less.txt',\n\u001b[1;32m      5\u001b[0m                                     colname = 'global_coo_50_and_less')\n",
+      "\u001b[0;32m<ipython-input-1-7e475adf428f>\u001b[0m in \u001b[0;36mprepare_global_coo\u001b[0;34m(path_to_file_with_global_coo, colname)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_global_coo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_file_with_global_coo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mglobal_coo_g25\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_file_with_global_coo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mglobal_coo_g25_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglobal_coo_g25\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mglobal_coo_g25\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'hit'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mglobal_coo_g25_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglobal_coo_g25_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'seqnames'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'start'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mglobal_coo_g25_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglobal_coo_g25_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_duplicates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -816,7 +858,8 @@
    "source": [
     "# add global coo to local df\n",
     "\n",
-    "local_and_global_df = local_coo.merge(codons50_global[['global_coo_50_and_less', 'tr_id']], on='tr_id', how='inner').merge(primary_global, on='tr_id', how='inner').merge(metadata_pc_g25[['tr_id', 'transcript_seq', '5UTR_start_seq']], on='tr_id', how='inner')\n",
+    "local_and_global_df = local_coo.merge(codons50_global[['global_coo_50_and_less', 'tr_id']], \n",
+    "                                      on='tr_id', how='inner').merge(primary_global, on='tr_id', how='inner').merge(metadata_pc_g25[['tr_id', 'transcript_seq', '5UTR_start_seq']], on='tr_id', how='inner')\n",
     "\n",
     "\n",
     "print (local_and_global_df.shape, local_and_global_df.tr_id.nunique())\n",
@@ -3066,6 +3109,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "* bedtools sort -i tmp_res/cod_ex_25_corrected.bed > tmp_res/cod_ex_25_corrected_sorted.bed\n",
+    "\n",
+    "* bedtools sort -i tmp_res/full_NTE.bed > tmp_res/full_NTE_sorted.bed\n",
+    "\n",
+    "* bedtools intersect -a tmp_res/full_NTE_sorted.bed -b tmp_res/cod_ex_25_corrected_sorted.bed -wao -s > tmp_res/NTE_full_start_with_all_coding_exons_g25.bed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "* bedtools sort -i tmp_res/cod_ex_25_corrected.bed > tmp_res/cod_ex_25_corrected_sorted.bed\n",
     "\n",
@@ -6148,7 +6204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
