--- a/jupyter_notebooks/3_v2_previously_identified_genes_Ivanov2011_UpSet_plot.ipynb
+++ b/jupyter_notebooks/3_v2_previously_identified_genes_Ivanov2011_UpSet_plot.ipynb
@@ -860,10 +860,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FNDC5',\n",
+       " 'OAZ3',\n",
+       " 'RNF187',\n",
+       " 'SP3',\n",
+       " 'NR1I2',\n",
+       " 'TEAD3',\n",
+       " 'VEGFA',\n",
+       " 'PRPS1L1',\n",
+       " 'TRPV6',\n",
+       " 'R3HCC1',\n",
+       " 'MYC',\n",
+       " 'BAG1',\n",
+       " 'EIF4G2',\n",
+       " 'WT1',\n",
+       " 'TEAD4',\n",
+       " 'GTF3A',\n",
+       " 'NPW',\n",
+       " 'KCTD11',\n",
+       " 'YPEL2',\n",
+       " 'NFKBID',\n",
+       " 'CACNG8',\n",
+       " 'HCK',\n",
+       " 'YPEL1',\n",
+       " 'DDX17']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'FNDC5, OAZ3, RNF187, SP3, NR1I2, TEAD3, VEGFA, PRPS1L1, TRPV6, R3HCC1, MYC, BAG1, EIF4G2, WT1, TEAD4, GTF3A, NPW, KCTD11, YPEL2, NFKBID, CACNG8, HCK, YPEL1, DDX17'\n",
+    "\n",
+    "s.split(', ')"
+   ]
   },
   {
    "cell_type": "code",
@@ -2214,7 +2252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
